--- a/Chat App/style.css
+++ b/Chat App/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 .myInput{
-    width: 40%;
+    width: 50%;
 }
 
 #chatSec{
@@ -56,7 +56,7 @@ body{
     font-size: 18px;
 }
 
-@media (max-width: 767px) {
+@media only screen and (max-width: 767px) {
 
     .chatP{
         font-size: .9em;
@@ -64,5 +64,14 @@ body{
 
     .msgContent {
         font-size: .9em;
+    }
+
+    #msgArea{
+        font-size: 0.9em;
+        font-weight: bold;
+        font-family: monospace;
+    }
+    #sendMsg, #logout{
+        font-size: 0.9em;
     }
 }
